# evil

./: +bindings.el  +cisco.el.gpg  +doom.el  +elisp.el  +evil.el  .gitignore  .gitmodules  LICENSE  README.org  config.el  init.el  packages.el
docs/: README.org  doom-cheatsheet.org  doom-docs-for-that-little-voice.org  doom-evil-collections.org  doom-popup.org  doom-projects.org  doom-works-only-in-vim.org  doom.org  tips.org  try-this-out.org  vim-antipatterns.org  vim-brackets.org  vim-completion.org  vim-daily-tricks.org  vim-fold.org  vim-g-commands.org  vim-jumplist.org  vim-macros.org  vim-marks.org  vim-motions.org  vim-operators.org  vim-registers.org  vim-search.org  vim-text-objects.org  vim-the-primeagen.org  vim-tips.org  vim.org
modules/custom/agenda/: README.org  config.el  packages.el
modules/custom/ai/: config.el
modules/custom/apl/: packages.el
modules/custom/semantic-org-roam-search/server/: .gitignore  README.org  pyproject.toml
modules/custom/semantic-org-roam-search/server/ssor/: config.py  org_roam_parser.py  org_roam_vectordb.py  server.py
preferences/: +appearance.el  +bindings.el  +blog.el  +buffers.el  +cisco.el.gpg  +clojure.el  +coding.el  +completion.el  +doom.el  +elisp.el  +embark.el  +encryption.el  +evil-gym.el  +evil.el  +finance.el  +folds.el  +functions.el  +gifs.el  +java.el  +journal.el  +jumplist.el  +keys.el  +lsp.el  +modeline.el  +narrowing.el  +parens.el  +persp.el  +pocket.el  +projectile.el  +rss.el  +uniquify.el  +vc.el  +window.el
themes/: default-black-theme.el  vim-colors-theme.el
work/: +cisco.el.gpg
(+85 files in other folders)
