[tool.poetry]
name = "ssor"
version = "0.1.0"
description = ""
authors = ["Wanderson Ferreira <wand@hey.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.9"
adjusttext = "^1.2.0"
langchain = "^0.2.15"
openai = "^1.43.0"
orgparse = "^0.4.20231004"
pandas = "^2.2.2"
sentence-transformers = "^3.0.1"
scikit-learn = "^1.5.1"
langchain-community = "^0.2.15"
pysqlite3-binary = "^0.5.3.post1"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.23"
langchain-chroma = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
